<resources>
    <string name="app_name">BookReader</string>
    <string name="title">Title</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="prefs">Preferences</string>
    <string name="menu_day_mode">Switch to day mode</string>
    <string name="menu_night_mode">Switch to night mode</string>
    <string name="menu_manual_sync">Sync reading progress</string>
    <string name="menu_prefs">Preferences</string>
    <string name="menu_toc">Show TOC</string>
    <string name="menu_about">About BookReader</string>
    <string name="show_toc">Show TOC</string>
    <string name="rolling_blind">Auto-scroll</string>
    <string name="about">BookReader is free</string>
    <string name="error_open_bk">Error opening book: %s</string>
    <string name="dictionary_lookup">Look up in Dictionary</string>
    <string name="wikipedia_lookup">Search on Wikipedia</string>
    <string name="google_lookup">Search on Google</string>
    <string name="word_select">"You selected '%s'</string>
    <string name="loading_wait">Loading, please wait</string>
    <string name="install_oi">Please install OI File Manager from the Android Market.</string>
    <string name="cloud_bm">Cloud bookmarks</string>
    <string name="toc_label">Table of contents</string>
    <string name="syncing">"Syncing progress..."</string>
    <string name="sync_failed">Sync failed</string>
    <string name="connection_fail">Could not connect to the sync server.</string>
    <string name="title_activity_web_view_test">WebViewTestActivity</string>
    
    <string name="never_read">Never</string>
        
    <string name="library">Library</string>
    <string name="book_details">Book details</string>
    
    <string name="book_by">By %s</string>
    <string name="last_read">Last read: %s</string>
    <string name="added_to_lib">Added to library: %s</string>
    
    <string name="view_details">View details</string>
    <string name="delete">Delete</string>
    <string name="scan_books">Scan for books</string>    
    
    <string name="importing_books">Importing books...</string>
    <string name="scanning_epub">Scanning for EPUB files.</string>
    <string name="importing">Importing %1$d of %2$d</string>
    <string name="scan_folders">Scanning for EPUB files.\nFolders scanned: %d</string>
    <string name="import_errors">Some files had errors while importing:</string>
    <string name="no_books_found">No books found.</string>
    <string name="no_bks_fnd_text">No books were found on your device.\nYou can download books at gutenberg.org or feedbooks.com</string>
    <string name="loading_library">Loading library...</string>
    <string name="scan_bks_question">There are no books in your library.\nWould you like to scan your device for books?</string>    
    
    <string-array name="libraryQueries">
        <item>Recently read</item>
        <item>Recently added</item>
        <item>Unread books</item>
        <item>Books by title</item>
        <item>Books by author</item> 
    </string-array>

    <string name="access_denied">Your access-key is invalid. Please visit pageturner-reader.org to obtain a valid access key.</string>
    <string name="import_books">Import Books</string>
    <string name="import_desc">You can either scan your entire SD-Card, or specify a folder to search.</string>
    <string name="scan_whole_card">Scan my entire SD Card</string>
    <string name="scan_folder">Scan a specific folder</string>
    <string name="copy_to_library">Copy books to my library folder</string>
    <string name="no_such_folder">The folder %s does not exist.</string>
    <string name="import_failed">Import failed</string>
    
    <string name="list_view">List view</string>    
	<string name="shelves_view">Shelves view</string>
    <string name="read">Read now</string>
    
    <string name="download">Download books</string>
    <string name="downloading">Downloading book...</string>
    <string name="feed_failed">Could not contact the site. Please try again.</string>
    <string name="book_failed">Could not download the book. Please try again.</string>

    <string name="browse">Browse...</string>
    <string name="open_file">Open ePub file</string>
    <string name="open_library">My Books</string>
    
    <string name="search_books">Search for books</string>
    <string name="enter_query">Please enter a search-term</string>
    <string name="buy_now">Buy now</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    
    <string name="qa_details">Details</string>
    <string name="qa_delete">Delete</string>
</resources>