<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_margin="20dip">
    
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/import_desc"
	    android:textAppearance="?android:attr/textAppearanceSmall" />
	
	<RadioGroup
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >
	    
	    <RadioButton 
	        android:id="@+id/scanSDRadio"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="true"
	        android:text="@string/scan_whole_card"/>
	    
	    <RadioButton 
	        android:id="@+id/scanFolderRadio"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/scan_folder"/>
	</RadioGroup>
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    
	    <EditText 
	        android:id="@+id/folderToScanText"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="/sdcard/eBooks"/>
	    
	    <Button 
	        android:id="@+id/browseButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/browse"/>
	</LinearLayout>
	
	<CheckBox 
	    android:id="@+id/copyToLibCheckBox"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/copy_to_library"/>
</LinearLayout>